--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
     <string name="app_name">PacmanKotlin</string>
     <string name="points">Points:</string>
-    <string name="move_right">Move Rigth</string>
     <string name="action_settings">Settings</string>
+    <string name="pause">Pause</string>
+    <string name="timer_value">Timer-værdi:</string>
+    <string name="timer">Timer</string>
     <string name="newgame">New Game</string>
+    <string name="move_left">Left</string>
+    <string name="move_right">Move Right</string>
+    <string name="move_up">Up</string>
+    <string name="move_down">Down</string>
 </resources>
